@@ -62,7 +62,7 @@ public final class DateUtil {
      * @param ds <br>
      * @return <br>
      */
-    public static Date string2Date(final String ds) {
+    public static Date format(final String ds) {
         if (StringUtils.isEmpty(ds)) {
             return null;
         }
@@ -70,30 +70,30 @@ public final class DateUtil {
         Date date = null;
         switch (dateStr.length()) {
             case DATE_LENGTH_8:
-                date = string2Date(dateStr, DateConstants.DATE_FORMAT_8);
+                date = format(dateStr, DateConstants.DATE_FORMAT_8);
                 break;
             case DATE_LENGTH_10:
-                date = string2Date(dateStr,
+                date = format(dateStr,
                     dateStr.indexOf("/") == -1 ? DateConstants.DATE_FORMAT_10 : DateConstants.DATE_FORMAT_10_2);
                 break;
             case DATE_LENGTH_11:
-                date = string2Date(dateStr, DateConstants.DATE_FORMAT_11);
+                date = format(dateStr, DateConstants.DATE_FORMAT_11);
                 break;
             case DATE_LENGTH_14:
-                date = string2Date(dateStr, DateConstants.DATETIME_FORMAT_14);
+                date = format(dateStr, DateConstants.DATETIME_FORMAT_14);
                 break;
             case DATE_LENGTH_17:
-                date = string2Date(dateStr, DateConstants.DATETIME_FORMAT_17);
+                date = format(dateStr, DateConstants.DATETIME_FORMAT_17);
                 break;
             case DATE_LENGTH_19:
-                date = string2Date(dateStr,
+                date = format(dateStr,
                     dateStr.indexOf("/") == -1 ? DateConstants.DATETIME_FORMAT_19 : DateConstants.DATETIME_FORMAT_19_2);
                 break;
             case DATE_LENGTH_21:
-                date = string2Date(dateStr, DateConstants.DATETIME_FORMAT_21);
+                date = format(dateStr, DateConstants.DATETIME_FORMAT_21);
                 break;
             case DATE_LENGTH_23:
-                date = string2Date(dateStr,
+                date = format(dateStr,
                     dateStr.indexOf("/") == -1 ? DateConstants.DATETIME_FORMAT_23 : DateConstants.DATETIME_FORMAT_23_2);
                 break;
             default:
@@ -111,7 +111,7 @@ public final class DateUtil {
      * @param format <br>
      * @return <br>
      */
-    public static Date string2Date(final String date, final String format) {
+    public static Date format(final String date, final String format) {
         if (StringUtils.isEmpty(format)) {
             throw new IllegalArgumentException("the date format string is null!");
         }
@@ -132,8 +132,8 @@ public final class DateUtil {
      * @param date <br>
      * @return <br>
      */
-    public static String date2String(final Date date) {
-        return date2String(date, DateConstants.DATETIME_FORMAT_19);
+    public static String format(final Date date) {
+        return format(date, DateConstants.DATETIME_FORMAT_19);
     }
 
     /**
@@ -145,7 +145,7 @@ public final class DateUtil {
      * @param format <br>
      * @return <br>
      */
-    public static String date2String(final Date date, final String format) {
+    public static String format(final Date date, final String format) {
         String result = null;
         if (date != null) {
             DateFormat sdf = new SimpleDateFormat(format);
@@ -162,7 +162,7 @@ public final class DateUtil {
      * @return <br>
      */
     public static String getCurrentTimestamp() {
-        return date2String(getCurrentDate(), DateConstants.DATETIME_FORMAT_14);
+        return format(getCurrentDate(), DateConstants.DATETIME_FORMAT_14);
     }
 
     /**
@@ -224,9 +224,9 @@ public final class DateUtil {
      * @return <br>
      */
     public static Date getYrMonthFirstDay(final Date d) {
-        String yrMonth = DateUtil.date2String(d, "yyyyMM");
+        String yrMonth = DateUtil.format(d, "yyyyMM");
         String date = yrMonth + "01";
-        return DateUtil.string2Date(date);
+        return DateUtil.format(date);
     }
 
     /**
@@ -248,6 +248,6 @@ public final class DateUtil {
             int d2 = calendar.get(Calendar.DAY_OF_YEAR);
             return d1 == d2 ? 0 : 1;
         }
-        return Math.abs(new Double(Math.floor((s2 - s1) / ONE_DAY_MILISECOND)).intValue());
+        return Math.abs(Double.valueOf(Math.floor((s2 - s1) / ONE_DAY_MILISECOND)).intValue());
     }
 }
